fix arrow invisible

--- a/src/app/components/logo/logo.component.scss
+++ b/src/app/components/logo/logo.component.scss
@@ -27,3 +27,13 @@
 		width: 14rem;
 	}
 }
+
+@media screen and (max-height: 736px) and (max-width: 852px){
+	.logo {
+		top: 2.5rem;
+		left: 5.2rem;
+	}
+	.logo svg {
+		width: 12rem;
+	}
+}
